# ReadFramework

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeUser.cmake  CMakeUserSkel.cmake  README.md  ReadFramework.cmake.in  index.html  params.json
cmake/: BuildTargets.cmake  Mac.cmake  MacBuildTarget.cmake  Unix.cmake  UnixBuildTarget.cmake  Utils.cmake  Win.cmake  WinBuildTarget.cmake
config/: Doxyfile  publish-doxygen
html/: _algorithms_8cpp.html  _algorithms_8cpp.js  _algorithms_8cpp__incl.map  _algorithms_8cpp__incl.md5  _algorithms_8h.html  _algorithms_8h.js  _algorithms_8h__dep__incl.map  _algorithms_8h__dep__incl.md5  _algorithms_8h__incl.map  _algorithms_8h__incl.md5  _algorithms_8h_source.html  _base_image_element_8cpp.html  _base_image_element_8cpp.js  _base_image_element_8cpp__incl.map  _base_image_element_8cpp__incl.md5  _base_image_element_8h.html  _base_image_element_8h.js  _base_image_element_8h__dep__incl.map  _base_image_element_8h__dep__incl.md5  _base_image_element_8h__incl.map  _base_image_element_8h__incl.md5  _base_image_element_8h_source.html  _base_module_8cpp.html  _base_module_8cpp.js  _base_module_8cpp__incl.map  _base_module_8cpp__incl.md5  _base_module_8h.html  _base_module_8h.js  _base_module_8h__dep__incl.map  _base_module_8h__dep__incl.md5  _base_module_8h__incl.map  _base_module_8h__incl.md5  _base_module_8h_source.html  _binarization_8cpp.html  _binarization_8cpp__incl.map  _binarization_8cpp__incl.md5  _binarization_8h.html  _binarization_8h__dep__incl.map  _binarization_8h__dep__incl.md5  _binarization_8h__incl.map  (+1200 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+96 more)
resources/raw/: read-icon.ai
src/: DebugFlo.cpp  DebugFlo.h  DebugMarkus.cpp  DebugMarkus.h  DebugStefan.cpp  DebugStefan.h  DebugThomas.cpp  DebugThomas.h  DebugUtils.cpp  DebugUtils.h  TODOs.md  changelog.txt  main.cpp  rdf.qrc  rdf.rc  resource.h
src/Core/: Algorithms.cpp  Algorithms.h  BaseImageElement.cpp  BaseImageElement.h  Blobs.cpp  Blobs.h  Drawer.cpp  Drawer.h  Elements.cpp  Elements.h  ElementsHelper.cpp  ElementsHelper.h  Evaluation.cpp  Evaluation.h  Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  Network.cpp  Network.h  PageParser.cpp  PageParser.h  Pixel.cpp  Pixel.h  PixelLabel.cpp  PixelLabel.h  PixelSet.cpp  PixelSet.h  ScaleFactory.cpp  ScaleFactory.h  Settings.cpp  Settings.h  Shapes.cpp  Shapes.h  Shapes.h~RF4c6271.TMP  SuperPixelScaleSpace.cpp  SuperPixelScaleSpace.h  Utils.cpp  Utils.h
src/Dummy/: DkDummy.cpp
src/Module/: BaseModule.cpp  BaseModule.h  Binarization.cpp  Binarization.h  DeepMerge.cpp  DeepMerge.h  DkBinarization.cpp  DkBinarization.h  EvaluationModule.cpp  EvaluationModule.h  FocusMeasure.cpp  FocusMeasure.h  FormAnalysis.cpp  FormAnalysis.h  GradientVector.cpp  GradientVector.h  GraphCut.cpp  GraphCut.h  LayoutAnalysis.cpp  LayoutAnalysis.h  LineTrace.cpp  LineTrace.h  PageSegmentation.cpp  PageSegmentation.h  PieData.cpp  PieData.h  SkewEstimation.cpp  SkewEstimation.h  SuperPixel.cpp  SuperPixel.h  SuperPixelClassification.cpp  SuperPixelClassification.h  SuperPixelTrainer.cpp  SuperPixelTrainer.h  TabStopAnalysis.cpp  TabStopAnalysis.h  TextBlockSegmentation.cpp  TextBlockSegmentation.h  TextLineSegmentation.cpp  TextLineSegmentation.h  (+8 more)
src/UnitTests/: BaselineTest.cpp  LayoutTest.cpp  LayoutTest.h  PreProcessingTest.cpp  PreProcessingTest.h  TableTest.cpp  TableTest.h  TestUtils.cpp  TestUtils.h  main.cpp
